--- a/app/sonar-project.properties
+++ b/app/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=xmart:project-name
-sonar.projectName=xmart:project-name
+sonar.projectKey=xmart:ecommerce-users
+sonar.projectName=xmart:ecommerce-users
 sonar.projectVersion=1.0
 sonar.language=ts
 sonar.sources=src
