--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "joi": "^17.2.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
