--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   #arn of ECR Repository
-  repository: 
+  repository: 224234462137.dkr.ecr.us-east-1.amazonaws.com/ecommerce-ms-users
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
@@ -15,9 +15,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 secret:
-  name:
+  name: "secret"
 configmap:
-  name: ""
+  name: "configmap-users"
 serviceAccount:
   # Specifies whether a service account should be created
   create: false
