#XMT-2130 [AlexP] - changed artifact name in tag pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -40,7 +40,7 @@ pipelines:
           script:
             - make docker-build-users docker-export-users
           artifacts:
-            - ecommerce-users.docker
+            - ecommerce-ms-users.docker
           services:
             - docker
           caches:
