--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.0",
     "@types/lodash": "^4.14.159",
+    "aws-sdk": "^2.789.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
