--- a/app/sonar-project.properties
+++ b/app/sonar-project.properties
@@ -7,6 +7,6 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=src/**/*.spec.ts
 sonar.tests=src
 sonar.test.inclusions=src/**/*.spec.ts,test/*.e2e-spec.ts
-sonar.coverage.exclusions=src/**/*.spec.ts,src/**/*.mock.ts,src/*.module.ts,src/**/*.module.ts,node_modules/*,coverage/lcov-report/*,src/migration/**/*
+sonar.coverage.exclusions=src/**/*.spec.ts,src/**/*.mock.ts,src/*.module.ts,src/**/*.module.ts,node_modules/*,coverage/lcov-report/*,src/migration/**/*,src/main.ts,src/utils/entity-manager-wrapper.service.ts,src/subscribers/**/*,src/providers/SNSProvider.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=coverage/test-reporter.xml
