--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/terminus": "^7.0.1",
+    "@nestjs/throttler": "^1.1.4",
     "@nestjs/typeorm": "^7.1.0",
     "@types/lodash": "^4.14.159",
     "aws-sdk": "^2.789.0",
